--- a/jeuPendu/src/application/option.fxml
+++ b/jeuPendu/src/application/option.fxml
@@ -23,7 +23,7 @@
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
-      <Slider layoutX="119.0" layoutY="174.0" prefHeight="31.0" prefWidth="202.0" />
+      <Slider fx:id="Slider" layoutX="119.0" layoutY="174.0" prefHeight="31.0" prefWidth="202.0" />
       <Label fx:id="taillePolice" layoutX="334.0" layoutY="155.0" prefHeight="44.0" prefWidth="43.0" />
       <Label layoutX="444.0" layoutY="174.0" text="Difficulté">
          <font>
@@ -48,5 +48,6 @@
             <Font size="25.0" />
          </font>
       </Label>
+      <Label fx:id="LABELTEST" layoutX="193.0" layoutY="225.0" prefHeight="26.0" prefWidth="34.0" text="A" />
    </children>
 </AnchorPane>
