--- a/jeuPendu/src/application/fin.fxml
+++ b/jeuPendu/src/application/fin.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<Pane styleClass="bodybg3" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" styleClass="bodybg3" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="reco" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="8.0" layoutY="11.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#recommencerPartie" prefHeight="52.0" prefWidth="136.0">
+      <Button fx:id="reco" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="25.0" layoutY="23.0" maxHeight="54.0" maxWidth="166.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#recommencerPartie" prefHeight="54.0" prefWidth="166.0">
          <graphic>
-            <ImageView accessibleRole="BUTTON" cache="true" cacheHint="QUALITY" fitHeight="52.0" fitWidth="136.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView accessibleRole="BUTTON" cache="true" cacheHint="QUALITY" fitHeight="68.0" fitWidth="170.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/lancer.png" />
                </image>
@@ -22,9 +22,9 @@
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding></Button>
-      <Button fx:id="acceuille2" layoutX="8.0" layoutY="75.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#acceuil" prefHeight="52.0" prefWidth="136.0">
+      <Button fx:id="acceuille2" layoutX="25.0" layoutY="96.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#acceuil" prefHeight="64.0" prefWidth="166.0">
          <graphic>
-            <ImageView fitHeight="52.0" fitWidth="155.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="68.0" fitWidth="170.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/retour.png" />
                </image>
@@ -33,28 +33,28 @@
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding></Button>
-      <Button fx:id="quitter2" layoutX="8.0" layoutY="141.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#quitterPartie" prefHeight="52.0" prefWidth="136.0">
+      <Button fx:id="quitter2" layoutX="25.0" layoutY="182.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#quitterPartie" prefHeight="54.0" prefWidth="166.0">
          <graphic>
-            <ImageView fitHeight="52.0" fitWidth="155.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="68.0" fitWidth="170.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/quit.png" />
                </image>
             </ImageView>
          </graphic></Button>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa31f" height="351.0" layoutX="147.0" layoutY="37.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="438.0" />
-      <Label fx:id="labelMessageFin" blendMode="MULTIPLY" layoutX="152.0" layoutY="50.0" prefHeight="77.0" prefWidth="432.0" textAlignment="CENTER" wrapText="true">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa31f" height="589.0" layoutX="221.0" layoutY="56.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="693.0" />
+      <Label fx:id="labelMessageFin" blendMode="MULTIPLY" layoutX="352.0" layoutY="89.0" prefHeight="77.0" prefWidth="432.0" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="Agency FB" size="34.0" />
          </font></Label>
-      <Label fx:id="labelMotMystere" layoutX="246.0" layoutY="200.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@application.css" textFill="RED">
+      <Label fx:id="labelMotMystere" layoutX="527.0" layoutY="252.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@application.css" textFill="RED">
          <font>
             <Font name="Agency FB Bold" size="36.0" />
          </font></Label>
-      <Label blendMode="MULTIPLY" ellipsisString="" layoutX="148.0" layoutY="258.0" prefHeight="117.0" prefWidth="438.0" text="Cliquez sur nouvelle partie en haut a gauche pour tester votre talent !  " textAlignment="CENTER" textOverrun="LEADING_WORD_ELLIPSIS" wrapText="true">
+      <Label blendMode="MULTIPLY" ellipsisString="" layoutX="349.0" layoutY="419.0" prefHeight="117.0" prefWidth="438.0" text="Cliquez sur nouvelle partie en haut a gauche pour tester votre talent !  " textAlignment="CENTER" textOverrun="LEADING_WORD_ELLIPSIS" wrapText="true">
          <font>
             <Font name="Agency FB Bold" size="23.0" />
          </font></Label>
-      <Label blendMode="MULTIPLY" layoutX="152.0" layoutY="144.0" text="Le mot était :">
+      <Label blendMode="MULTIPLY" layoutX="314.0" layoutY="182.0" text="Le mot était :">
          <font>
             <Font name="Agency FB" size="37.0" />
          </font></Label>
