--- a/jeuPendu/src/application/option.fxml
+++ b/jeuPendu/src/application/option.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
@@ -17,13 +18,13 @@
             <Image url="@../images/optionFarWest_Titre.png" />
          </image>
       </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d0d1d18c" height="366.0" layoutX="57.0" layoutY="97.0" stroke="#ffffff00" strokeType="INSIDE" width="726.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d0d1d18c" height="366.0" layoutX="58.0" layoutY="94.0" stroke="#ffffff00" strokeType="INSIDE" width="726.0" />
       <Label layoutX="132.0" layoutY="132.0" text="Taille de la police ">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
-      <Slider fx:id="Slider" layoutX="119.0" layoutY="174.0" prefHeight="31.0" prefWidth="202.0" />
+      <Slider fx:id="slider" blockIncrement="1.0" layoutX="119.0" layoutY="174.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" prefHeight="31.0" prefWidth="202.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
       <Label fx:id="taillePolice" layoutX="334.0" layoutY="155.0" prefHeight="44.0" prefWidth="43.0" />
       <Label layoutX="444.0" layoutY="174.0" text="Difficulté">
          <font>
@@ -48,6 +49,7 @@
             <Font size="25.0" />
          </font>
       </Label>
-      <Label fx:id="LABELTEST" layoutX="193.0" layoutY="225.0" prefHeight="26.0" prefWidth="34.0" text="A" />
+      <Label fx:id="labelPolice" layoutX="193.0" layoutY="225.0" prefHeight="26.0" prefWidth="34.0" text="A" />
+      <Button fx:id="test" layoutX="660.0" layoutY="383.0" mnemonicParsing="false" onAction="#applyChanges" text="Button" />
    </children>
 </AnchorPane>
