--- a/jeuPendu/src/application/option.fxml
+++ b/jeuPendu/src/application/option.fxml
@@ -50,6 +50,7 @@
          </font>
       </Label>
       <Label fx:id="labelPolice" layoutX="193.0" layoutY="225.0" prefHeight="26.0" prefWidth="34.0" text="A" />
-      <Button fx:id="test" layoutX="660.0" layoutY="383.0" mnemonicParsing="false" onAction="#applyChanges" text="Button" />
+      <Button fx:id="apply" layoutX="585.0" layoutY="385.0" mnemonicParsing="false" onAction="#applyChanges" text="Appliquer" />
+      <Button fx:id="quit" layoutX="660.0" layoutY="385.0" mnemonicParsing="false" onAction="#acceuil" text="Quitter" />
    </children>
 </AnchorPane>
