--- a/jeuPendu/src/application/option.fxml
+++ b/jeuPendu/src/application/option.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="524.0" prefWidth="842.0" styleClass="OptionFarWest" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="524.0" prefWidth="842.0" styleClass="OptionWestern" stylesheets="@western.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="34.0" fitWidth="251.0" layoutX="51.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -50,7 +49,5 @@
          </font>
       </Label>
       <Label fx:id="labelPolice" layoutX="193.0" layoutY="225.0" prefHeight="26.0" prefWidth="34.0" text="A" />
-      <Button fx:id="apply" layoutX="585.0" layoutY="385.0" mnemonicParsing="false" onAction="#applyChanges" text="Appliquer" />
-      <Button fx:id="quit" layoutX="660.0" layoutY="385.0" mnemonicParsing="false" onAction="#acceuil" text="Quitter" />
    </children>
 </AnchorPane>
