--- a/jeuPendu/src/application/fin.fxml
+++ b/jeuPendu/src/application/fin.fxml
@@ -46,7 +46,7 @@
          <font>
             <Font name="Agency FB" size="34.0" />
          </font></Label>
-      <Label fx:id="labelMotMystere" layoutX="527.0" layoutY="252.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@application.css" textFill="RED">
+      <Label fx:id="labelMotMystere" layoutX="527.0" layoutY="252.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@western.css" textFill="RED">
          <font>
             <Font name="Agency FB Bold" size="36.0" />
          </font></Label>
