--- a/jeuPendu/src/application/option.fxml
+++ b/jeuPendu/src/application/option.fxml
@@ -30,7 +30,7 @@
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
-      <Spinner fx:id="spinneurDifficulte" layoutX="562.0" layoutY="177.0" />
+      <Spinner fx:id="spinneurDifficulty" layoutX="562.0" layoutY="177.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b6b6b" height="95.0" layoutX="334.0" layoutY="317.0" stroke="#ffffff00" strokeType="INSIDE" width="166.0" />
       <CheckBox fx:id="westernTheme" layoutX="358.0" layoutY="324.0" mnemonicParsing="false" onAction="#setWesternTheme" text="Western" textFill="WHITE">
          <font>
