Test pour les themes

--- a/jeuPendu/src/application/application.css
+++ b/jeuPendu/src/application/application.css
@@ -23,3 +23,8 @@
 .label{
 
 }
+
+.IntroFutur{
+    -fx-background-image: url("../images/IntroFutur.png") ;
+     -fx-background-size: 100% 100%;
+}
