--- a/jeuPendu/src/application/introduction.fxml
+++ b/jeuPendu/src/application/introduction.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="700.0" maxWidth="1300.0" minHeight="700.0" minWidth="1300.0" prefHeight="700.0" prefWidth="1300.0" styleClass="IntroWestern" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="700.0" maxWidth="1300.0" minHeight="700.0" minWidth="1300.0" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="161.0" layoutY="58.0" prefHeight="80.0" prefWidth="293.0" text="Bienvenue" textAlignment="JUSTIFY" wrapText="true">
          <font>
@@ -42,7 +42,14 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="284.0" layoutY="396.0" maxHeight="60.0" maxWidth="154.0" minHeight="60.0" minWidth="154.0" mnemonicParsing="false" onAction="#ouvrirOption" prefHeight="60.0" prefWidth="154.0" />
+      <Button layoutX="284.0" layoutY="396.0" maxHeight="60.0" maxWidth="154.0" minHeight="60.0" minWidth="154.0" mnemonicParsing="false" onAction="#ouvrirOption" prefHeight="60.0" prefWidth="154.0">
+         <graphic>
+            <ImageView fitHeight="73.0" fitWidth="154.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/optionIntro.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <Button layoutX="284.0" layoutY="471.0" maxHeight="60.0" maxWidth="154.0" minHeight="60.0" minWidth="154.0" mnemonicParsing="false" onAction="#ouvrirSupport" prefHeight="60.0" prefWidth="154.0">
          <graphic>
             <ImageView fitHeight="34.0" fitWidth="157.0" pickOnBounds="true" preserveRatio="true">
@@ -59,10 +66,5 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <ImageView fitHeight="73.0" fitWidth="154.0" layoutX="284.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/optionIntro.png" />
-         </image>
-      </ImageView>
    </children>
 </Pane>
