--- a/jeuPendu/src/application/application.css
+++ b/jeuPendu/src/application/application.css
@@ -1,31 +1,5 @@
-.FinWestern{
-    -fx-background-image: url("../images/FinWestern.jpg") ;
-     -fx-background-size: 100% 100%;
-}
-.EnJeuWestern{
-    -fx-background-image: url("../images/EnJeuWestern.jpg") ;
-     -fx-background-size: 100% 100%;
-}
-.IntroWestern{
-    -fx-background-image: url("../images/IntroWestern.jpg") ;
-     -fx-background-size: 100% 100%;
-}
+.label5{
+	-fx-font-size :54pt ;
+	}
 
-.SupportWestern{
-	-fx-background-image: url("../images/supportWestern.png") ;
-     -fx-background-size: 100% 100%;
-}
-
-.OptionWestern{
-	-fx-background-image: url("../images/optionWestern.png") ;
-     -fx-background-size: 100% 100%;
-}
-
-.IntroFutur{
-    -fx-background-image: url("../images/IntroFutur.png") ;
-     -fx-background-size: 100% 100%;
-}
-
-.label{
-
-}
+	
