--- a/jeuPendu/src/application/fin.fxml
+++ b/jeuPendu/src/application/fin.fxml
@@ -42,19 +42,19 @@
             </ImageView>
          </graphic></Button>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa31f" height="589.0" layoutX="221.0" layoutY="56.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="693.0" />
-      <Label fx:id="labelMessageFin" blendMode="MULTIPLY" layoutX="352.0" layoutY="89.0" prefHeight="77.0" prefWidth="432.0" textAlignment="CENTER" wrapText="true">
+      <Label fx:id="labelMessageFin" alignment="CENTER" blendMode="MULTIPLY" layoutX="230.0" layoutY="58.0" prefHeight="142.0" prefWidth="663.0" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="Agency FB" size="34.0" />
          </font></Label>
-      <Label fx:id="labelMotMystere" layoutX="369.0" layoutY="313.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@western.css" textFill="RED">
+      <Label fx:id="labelMotMystere" alignment="CENTER" layoutX="450.0" layoutY="273.0" prefHeight="77.0" prefWidth="373.0" styleClass="ouest" textFill="RED">
          <font>
             <Font name="Agency FB Bold" size="36.0" />
          </font></Label>
-      <Label blendMode="MULTIPLY" ellipsisString="" layoutX="349.0" layoutY="419.0" prefHeight="117.0" prefWidth="438.0" text="Cliquez sur nouvelle partie en haut a gauche pour tester votre talent !  " textAlignment="CENTER" textOverrun="LEADING_WORD_ELLIPSIS" wrapText="true">
+      <Label fx:id="labelFin2" alignment="CENTER" blendMode="MULTIPLY" ellipsisString="" layoutX="255.0" layoutY="386.0" prefHeight="256.0" prefWidth="654.0" text="Cliquez sur nouvelle partie en haut a gauche pour tester votre talent !  " textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
          <font>
             <Font name="Agency FB Bold" size="23.0" />
          </font></Label>
-      <Label blendMode="MULTIPLY" layoutX="314.0" layoutY="182.0" text="Le mot était :">
+      <Label fx:id="labelFin1" alignment="CENTER" blendMode="MULTIPLY" layoutX="251.0" layoutY="182.0" prefHeight="77.0" prefWidth="363.0" text="Le mot était :">
          <font>
             <Font name="Agency FB" size="37.0" />
          </font></Label>
