--- a/jeuPendu/src/application/option.fxml
+++ b/jeuPendu/src/application/option.fxml
@@ -4,48 +4,43 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Spinner?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="524.0" prefWidth="842.0" styleClass="OptionWestern" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="524.0" prefWidth="842.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="34.0" fitWidth="251.0" layoutX="51.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/optionFarWest_Titre.png" />
-         </image>
-      </ImageView>
+      <ImageView fitHeight="34.0" fitWidth="251.0" layoutX="51.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d0d1d18c" height="366.0" layoutX="58.0" layoutY="94.0" stroke="#ffffff00" strokeType="INSIDE" width="726.0" />
-      <Label layoutX="132.0" layoutY="132.0" text="Taille de la police ">
+      <Label fx:id="labelOption1" alignment="CENTER" layoutX="63.0" layoutY="100.0" prefHeight="76.0" prefWidth="323.0" text="Taille de la police " textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
       <Slider fx:id="slider" blockIncrement="1.0" layoutX="119.0" layoutY="174.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" prefHeight="31.0" prefWidth="202.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
       <Label fx:id="taillePolice" layoutX="334.0" layoutY="155.0" prefHeight="44.0" prefWidth="43.0" />
-      <Label layoutX="444.0" layoutY="174.0" text="Difficulté">
+      <Label fx:id="labelOption2" alignment="CENTER" layoutX="326.0" layoutY="161.0" prefHeight="56.0" prefWidth="262.0" text="Difficulté">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
       <Spinner fx:id="spinneurDifficulty" layoutX="562.0" layoutY="177.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b6b6b" height="95.0" layoutX="334.0" layoutY="317.0" stroke="#ffffff00" strokeType="INSIDE" width="166.0" />
-      <CheckBox fx:id="westernChoice" layoutX="358.0" layoutY="324.0" mnemonicParsing="false" onAction="#setWesternChoice" text="Western" textFill="WHITE">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b6b6b" height="118.0" layoutX="298.0" layoutY="317.0" stroke="#ffffff00" strokeType="INSIDE" width="202.0" />
+      <CheckBox fx:id="westernChoice" layoutX="341.0" layoutY="336.0" mnemonicParsing="false" onAction="#setWesternChoice" text="Western" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="21.0" />
          </font>
       </CheckBox>
-      <CheckBox fx:id="futuristeChoice" layoutX="358.0" layoutY="368.0" mnemonicParsing="false" onAction="#setFuturisteChoice" text="Futuriste" textFill="WHITE">
+      <CheckBox fx:id="futuristeChoice" layoutX="340.0" layoutY="376.0" mnemonicParsing="false" onAction="#setFuturisteChoice" text="Futuriste" textFill="WHITE">
          <font>
-            <Font size="20.0" />
+            <Font size="21.0" />
          </font>
       </CheckBox>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b6b6b" height="30.0" layoutX="333.0" layoutY="280.0" stroke="BLACK" strokeType="INSIDE" width="166.0" />
-      <Label layoutX="379.0" layoutY="277.0" text="Thème" textFill="WHITE">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b6b6b" height="56.0" layoutX="297.0" layoutY="254.0" stroke="BLACK" strokeType="INSIDE" width="202.0" />
+      <Label fx:id="labelOption3" alignment="CENTER" layoutX="297.0" layoutY="255.0" prefHeight="56.0" prefWidth="202.0" text="Thème" textFill="WHITE">
          <font>
-            <Font size="25.0" />
+            <Font size="21.0" />
          </font>
       </Label>
       <Label fx:id="labelPolice" layoutX="193.0" layoutY="225.0" prefHeight="26.0" prefWidth="34.0" text="A" />
